--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en" data-theme="light">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" />
+    <link rel="icon" type="image/svg+xml"  href="logo.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Bistro Boss Restaurants</title>
   </head>
   <body>
     <div id="root"></div>
